# cellscape

./: .gitignore  AGENTS.md  Cargo.toml  README.md  Trunk.toml  index.html
scripts/: build_for_site.sh
src/: glance_view.rs  gui.rs  lib.rs  main.rs  palette.rs  rule_editor.rs  rule_meta.rs  simulation.rs  texture.rs
src/gui/: mixing_mode_gui.rs  mod.rs  rule_slots_gui.rs
src/simulation/: cell_source.rs  rule_io.rs
